namespace TodoApi.Models.Vessels
{
    public class UpdateVesselDTO : CreateVesselDTO
    {
        // No additional fields; the Imo from CreateVesselDTO is used as identifier when needed
    }
}
